Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18135

sanity-lnet test_250: test_250 failed with 1: Error: argument "eth0" is wrong: table id value is invalid

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.17.0
    • Lustre 2.17.0, Lustre 2.15.7
    • 3
    • 9223372036854775807

      This issue was created by maloo for Chris Horn <chris.horn@hpe.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/cd605fdb-db6b-4524-8e1a-af736c9adb13

      test_250 failed with the following error:

      test_250 failed with 1
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-reviews/106749 - 4.18.0-513.24.1.el8_9.x86_64
      servers: https://build.whamcloud.com/job/lustre-reviews/106749 - 4.18.0-513.24.1.el8_lustre.x86_64

      The test suite was running under IPv6 configuration

      [14768.391232] Lustre: DEBUG MARKER: == sanity-lnet test 250: test that linux routes are added ========================================================== 01:42:49 (1723254169)
      [14768.403873] Lustre: DEBUG MARKER: /usr/sbin/lnetctl lnet unconfigure
      [14768.408152] LNet: 1183401:0:(lib-ptl.c:966:lnet_clear_lazy_portal()) Active lazy portal 0 on exit
      [14768.417167] Lustre: DEBUG MARKER: /usr/sbin/lnetctl lnet configure -l
      [14768.428658] Lustre: DEBUG MARKER: /usr/sbin/lnetctl net add --net tcp --if eth0
      [14768.434301] LNet: Added LNI fd33:3981:3213:f020:0:5254:9:7574@tcp [8/256/0/180]
      [14768.436281] LNet: Accept all, port 7988
      [14768.684449] Lustre: DEBUG MARKER: /usr/sbin/lctl mark  sanity-lnet test_250: @@@@@@ FAIL: test_250 failed with 1 
      
      == sanity-lnet test 250: test that linux routes are added ========================================================== 01:42:49 (1723254169)
      /usr/sbin/lnetctl lnet unconfigure
      /usr/sbin/lnetctl lnet configure -l
      /usr/sbin/lnetctl net add --net tcp --if eth0
      Error: argument "eth0" is wrong: table id value is invalid
      
       sanity-lnet test_250: @@@@@@ FAIL: test_250 failed with 1 
      

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-lnet test_250 - test_250 failed with 1

            cbordage Cyril Bordage
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: