LU-18135 scripts: call ksocklnd-config with IPv6

lustre_lnet_setup_mrrouting uses ioctl to get the interfaces. But,
ioctl does not work with IPv6, so ksocklnd-config call is skipped. To
tackle that, we move the part where we find out the interfaces into
ksocklnd-config itself.

Test-Parameters: trivial testlist=sanity-lnet env=FORCE_LARGE_NID=true,LOAD_MODULES_REMOTE=true
Fixes: 9d9b8cbaa4 ("LU-16822 lnet: use proper Netlink flags for setup")
Signed-off-by: Cyril Bordage <cbordage@whamcloud.com>
Change-Id: Id6ecb1d21db28deebc17420a7519ae1a12af8af0
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61649
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Chris Horn <chris.horn@hpe.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>